<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 <RelativeLayout
        android:id="@+id/rt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/common_top_bar_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/strPosting"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <Button
            android:id="@+id/bbsposting_btn_commit"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="6dp"
            android:background="@drawable/btn_style"
            android:text="@string/strSure" />
<!--          <Button -->
<!--             android:id="@+id/bbsposting_button_sure" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:background="@drawable/button_login_bg" -->
<!--             android:gravity="center" -->
<!--            android:paddingBottom="4dp"  -->
<!--         	android:paddingTop="4dp" -->
<!--             android:text="@string/strSure" -->
<!--             android:textColor="@android:color/white" -->
<!--             android:textSize="18sp"            -->
<!--             android:layout_marginRight="12.0dip"    -->
<!--          	android:layout_alignParentRight="true"    -->
<!--          	android:layout_centerVertical="true"  -->
<!--             /> -->
    </RelativeLayout>
    
	<!-- 标题 -->

   <RelativeLayout
        android:id="@+id/drugbbs_posting_rt1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
   
        android:layout_marginTop="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
         >

        <!-- paddingLeft 其中文字与文本框距离 -->

        <EditText
            android:id="@+id/bbsposting_edittext_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/qq_edit_login"
            android:hint="@string/strTitle"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingLeft="20.0sp"
            android:saveEnabled="true"
            android:singleLine="true"
            android:textSize="18sp" />

     
        <!-- 先要alignBottom 再marginRight 才有用 -->

   
    </RelativeLayout>

	<RelativeLayout
    	android:id="@+id/RelativeLayout01"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
    	>

    <!--
                 //可以显示多行  
            	//输入时光标左上角
            	//最小显示6行
    -->

    <EditText
        android:id="@+id/bbsposting_edittext_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      	android:paddingLeft="20.0sp"
        android:background="@drawable/qq_edit_login"
        android:gravity="left|top"
        android:hint="@string/strPostingContent"
        android:inputType="textMultiLine"
        android:minLines="11"
        android:saveEnabled="true" />

    <!-- 其他按钮 -->

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bbsposting_edittext_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_login_bg"
        android:textColor="#ffffff"
        android:text="@string/strOther" />
</RelativeLayout>

</LinearLayout>
