<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f2f0eb"
    android:orientation="vertical" 
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/common_top_bar_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/strFeedBack"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/feedback_btn_sumit"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="6dp"
            android:background="@drawable/btn_style"
            android:text="@string/strSumit" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" 
        >
        
        <RelativeLayout
            android:id="@+id/feedback_rl"
           
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="0dip"
             ><!--
                 //可以显示多行  
            	//输入时光标左上角
            	//最小显示6行
            -->
            <!-- android:paddingLeft="50.0sp" -->

            <EditText
                android:id="@+id/feedback_et_backconent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:background="@drawable/qq_edit_login"
                android:gravity="left|top"
                android:hint="@string/strfeedback"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:saveEnabled="true" />
			<EditText
                android:id="@+id/feedback_et_contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                 android:layout_marginTop="5dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_below="@id/feedback_et_backconent"
                android:background="@drawable/qq_edit_login"
                android:gravity="left|top"
                android:hint="@string/strContact"
                
                android:maxLength="1"
                android:saveEnabled="true" />
            <!-- 反馈按钮 -->

<!--             <Button -->
<!--                 android:id="@+id/login_btn_strSumit" -->
<!--                 android:layout_width="fill_parent" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_alignParentBottom="true"     -->
<!--                 android:layout_marginLeft="5dip" -->
<!--                 android:layout_marginRight="5dip"  -->
<!-- 				android:layout_marginBottom="5dip" -->
<!--                 android:background="@drawable/button_login_bg" -->
<!--                 android:text="@string/strSumit" -->
<!--                 android:textColor="@android:color/white" /> -->
        </RelativeLayout>
	</LinearLayout>
    
   

</LinearLayout>
